P4ADEV-2057 assessment detail